<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:nestedScrollingEnabled="false"
    android:id="@+id/vues1"
    android:background="@color/background_material_light"
    android:contentDescription="@string/lb_titre">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_btn_calcul"
        android:id="@+id/btnCalcul"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/radioGroup"
        android:layout_alignStart="@+id/radioGroup"
        android:layout_toEndOf="@id/vues1"
        android:onClick="onClick"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="98dp"
        android:weightSum="1"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:layout_alignParentBottom="false"
        android:layout_alignParentTop="false"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:id="@+id/radioGroup">

        <RadioButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_radio_femme"
            android:id="@+id/rdFemme"
            android:checked="false"
            android:layout_below="@+id/label_Welcome"
            android:layout_alignLeft="@+id/rdHomme"
            android:layout_alignStart="@+id/rdHomme"
            android:textStyle="bold"
            android:theme="@style/AppTheme"
            android:elegantTextHeight="true"
            android:capitalize="characters"
            android:layout_marginRight="0dp"
            android:layout_gravity="center_horizontal" />

        <RadioButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_radio_homme"
            android:id="@+id/rdHomme"
            android:checked="false"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:capitalize="words"
            android:elegantTextHeight="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="0dp"
            android:textStyle="bold"
           />

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/info_text"
        android:text="@string/info_text"
        android:layout_above="@+id/btnCalcul"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@id/btnCalcul" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genre"
        android:id="@+id/lb_sexe"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="72dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/inp_hematie"
        android:background="@android:color/background_light"
        android:hint="@string/lb_titre"
        android:autoText="false"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:layout_marginTop="25dp"
        android:layout_toEndOf="@id/lb_sexe"
        android:layout_alignStart="@id/vues1" />


</RelativeLayout>
